# specter

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
config/: default.yaml
data/: user_agents.json
examples/: basic_navigation.py  data_extraction.py  stealth_session.py
specter/: __init__.py  cli.py  config.py
specter/ai/: prompts.py  provider.py
specter/automation/: actions.py  recorder.py  replayer.py  waits.py
specter/core/: __init__.py  browser.py  cdp_client.py  element.py  page.py  types.py
specter/intelligence/: extractor.py  selector.py  vision.py
specter/network/: api_discovery.py  interceptor.py
specter/stealth/: evasions.py  fingerprint.py  human.py
tests/: test_human.py  test_interceptor.py  test_types.py  test_waits.py
